dia 19 challenge completado. Casi muero. Fin del comunicado.

--- a/19 - Webcam Fun/style.css
+++ b/19 - Webcam Fun/style.css
@@ -5,7 +5,12 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
+/*sacamos el video molesto de
+arriba */
+video{
+  width: 0;
+  height: 0;
+}
 html {
   font-size: 10px;
   background:#ffc600;
