dia 27 challenge finalizado! Ya casigit status e.e

--- a/27 - Click and Drag/style.css
+++ b/27 - Click and Drag/style.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: sans-serif;
+  font-family: cantarell, sans-serif;
   font-size: 20px;
   margin: 0;
 }
